# stars-ring

./: .gitignore
starsring/: CMakeLists.txt  stars_ring_debug  stars_ring_release
starsring/maths_in_physic/include/maths_in_physic/: oscilator_realm.hpp
starsring/maths_in_physic/src/: spin_realm.cpp
starsring/stars_ring/: CMakeLists.txt
starsring/stars_ring/src/: main.cpp
starsring/stars_ring_analytical/: CMakeLists.txt
starsring/stars_ring_analytical/include/stars_ring_analytical/: analytical_formulas_box_af_oscilators.hpp  standard_calculator.hpp
starsring/stars_ring_analytical/src/: analytical_formulas_box_jabcdz.cpp
starsring/stars_ring_basis/include/stars_ring_basis/: basis_print.hpp  build_perturbation_localized_basis.hpp  cycle_helper_functions.hpp  ksubspace_element.hpp  raw_state_coupled_elements_generator.hpp  transform_translation_unique_basis_to_ksubspace_basis.hpp  (+1 more)
starsring/stars_ring_basis/src/: basis_linkers.cpp  basis_toolbox.cpp  build_perturbation_localized_basis.cpp  build_perturbation_translation_unique_basis.cpp  cycle_helper_functions.cpp  localized_coupled_elements_generator.cpp  localized_element.cpp  translation_unique_coupled_elements_generator.cpp
starsring/stars_ring_core/: CMakeLists.txt
starsring/stars_ring_numerical/: CMakeLists.txt
starsring/stars_ring_numerical/src/: hamiltonian_creator_jabcdz.cpp  hamiltonian_creator_oscylator.cpp  hamiltonian_creator_spin.cpp  morphology_alalizer.cpp  phis_establisher.cpp
starsring/utility_kit/: CMakeLists.txt
starsring/utility_kit/src/: consts.cpp  print_utility.cpp
(+96 files in other folders)
